# libsquish

./: .gitignore  CMakeLists.txt  ChangeLog  Doxyfile  Makefile  README.md  config  libsquish.pc.in  squish.cpp  squish_export.h
.github/: release.yml
.github/workflows/: build-libsquish-linux.yml  build-libsquish-windows.yml  build-project.yml  master-pull-request-merge-reaction.yml  push-reaction.yml
cmake/module/Squish/: Testing.cmake
doc/: CMakeLists.txt
doc/cmake/file_templates/: mainpage.md.in
doc/res/: DoxygenLayout.xml  header.html
doc/res/theme/doxygen-awesome/: doxygen-awesome-customize.css
lib/: CMakeLists.txt
lib/include/squish/: squish.h
png/: CMakeLists.txt
png/src/: squishpng.cpp
tests/: CMakeLists.txt
tests/_common/: CMakeLists.txt
tests/_common/include/: libsquish_test_common.h
tests/color_error/: CMakeLists.txt  tst_color_error.cpp
trunk/: CMakeLists.txt  Makefile  config  squish.h
